--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        title Seznam úkolů
+        title Teploty
         link(rel='stylesheet'
 href='https://getbootstrap.com/docs/4.4/dist/css/bootstrap.min.css')
     body
